fix: support Android API 28 URL encoding